--- a/lmstudio-config.json
+++ b/lmstudio-config.json
@@ -8,7 +8,7 @@
         "Content-Type": "application/json"
       },
 
-      "timeout": 120,
+      "request_timeout": 120,
 
       "req_template_json_object": {
         "model": "PUT_YOUR_MODEL_ID",
@@ -23,7 +23,7 @@
       },
 
       "response_json": true,
-      "response_json_field": "choices"
+      "response_json_field": "$.choices[0].message.content"
     }
   }
 }
